--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -7,44 +7,55 @@
             name="viewmodel"
             type="com.example.notepad.ui.NoteViewModel" />
     </data>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.fragments.NoteListFragment">
 
 
-        <TextView
-            android:id="@+id/notepadLabel"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/header_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/poppins"
-            android:text="@string/app_name"
-            android:textColor="@color/orange"
-            android:textSize="34sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="0dp"
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:paddingRight="15dp">
+
+            <TextView
+                android:id="@+id/notepadLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins"
+                android:text="@string/app_name"
+                android:textColor="@color/orange"
+                android:textSize="34sp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/addNoteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="14dp"
+                android:backgroundTint="@color/orange"
+                android:clickable="true"
+                android:src="@drawable/baseline_note_add_24" />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/noteList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/notepadLabel"
-            android:layout_marginTop="16dp"
+            android:layout_below="@+id/header_container"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
             android:scrollbars="vertical" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addNoteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="30dp"
-            android:clickable="true"
-            android:backgroundTint="@color/orange"
-            android:src="@drawable/baseline_note_add_24" />
     </RelativeLayout>
 </layout>
