--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -9,6 +9,7 @@
     </data>
 
     <RelativeLayout
+        android:id="@+id/noteListLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.fragments.NoteListFragment">
@@ -52,9 +53,9 @@
                 android:id="@+id/cancelSelectedItems"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/orange"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="14dp"
+                android:backgroundTint="@color/orange"
                 android:src="@drawable/baseline_cancel_24"
                 android:visibility="gone" />
 
