--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -4,11 +4,13 @@
     android:id="@+id/noteItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
+        android:id="@+id/noteCardItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/border"
@@ -18,7 +20,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:background="@color/white">
 
             <TextView
                 android:id="@+id/noteTitleItem"
@@ -28,6 +31,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="0dp"
                 android:layout_marginTop="0dp"
+                android:background="@color/white"
                 android:fontFamily="@font/poppins"
                 android:textColor="@color/orange"
                 android:textSize="20sp"
@@ -48,9 +52,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="13dp"
+                android:layout_toStartOf="@+id/deleteItemButton"
                 android:minWidth="40dp"
                 android:minHeight="40dp"
-                android:layout_toStartOf="@+id/deleteItemButton"
                 android:src="@drawable/baseline_edit_note_24" />
 
             <TextView
