--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#EF6C00</color>
-    <color name="faded_yellow">#FFF9A825</color>
+    <color name="faded_red">#EC968F</color>
+    <color name="faded_blue">#A0D3EB</color>
+    <color name="faded_green">#DEF7C2</color>
+    <color name="faded_yellow">#F1EBB3</color>
 </resources>
